[FIX] marketing_automation: Fix layout issues on activity form

--- a/marketing_automation/static/src/less/marketing_automation.less
+++ b/marketing_automation/static/src/less/marketing_automation.less
@@ -3,13 +3,6 @@
 @o-ma-color-white: #FFFFFF;
 
 // ------------------------------------------------------------------
-// Customize Field
-// ------------------------------------------------------------------
-.o_ma_alert {
-    .o-position-absolute();
-}
-
-// ------------------------------------------------------------------
 // Campaign Kanban
 // ------------------------------------------------------------------
 .o_ma_campaign_kanban {
